# pythonProject

./: .coverage  .env  .env.template  .gitignore  README.md  pyproject.toml
decorators/: decorators.py
src/: external_api.py  filter_re.py  finance.py  generators.py  main.py  masks.py  transations.py  utils.py  widget.py
src/processing/: processing.py  sort.py
tests/: main.py  test_account.py  test_card.py  test_csv.py  test_data.py  test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_sortdate.py  test_utils.py
